Bug 287983 - Dolphin truncates tooltip information for long file names
Summary: Dolphin truncates tooltip information for long file names
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: tooltip (other bugs)
Version First Reported In: 2.1
Platform: Chakra Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 295640 299773 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-01 12:35 UTC by Māris Nartišs
Modified: 2013-11-06 09:55 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments
An example of truncated file name in hover tooltip. (272.81 KB, image/jpeg)
2011-12-01 12:35 UTC, Māris Nartišs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Māris Nartišs 2011-12-01 12:35:30 UTC
Created attachment 66261 [details]
An example of truncated file name in hover tooltip.

Version:           1.7 (using KDE 4.7.3) 
OS:                Linux

When hovering over a file with looong name, Dolphin displays tooltip with file information in whole screen width, still it might be not enough to show full file name as no file name wrapping happens.

Reproducible: Always

Steps to Reproduce:
touch "This is a reaaaaallllyyyy loooooooooooong file name with a garbage in its name that starts here asldkanxzmnvi adf kl asdfaiuehkfjhkdfja jhdf uauio hasdjfh ajcxhuv ajsedf a jhdfoickxkv jhdsfaie ajd c akhsdiohoiweoihf sldf mzaishdyiowqeoqiyiweyq.txt"
Hover file with mouse in Dolphin.


Expected Results:  
Dolphin should word-wrap file name to fit it to tooltip width.
Comment 1 Blagovest Zlatev 2011-12-01 16:30:57 UTC
The bug is reproduciable and no duplicates were found.
Comment 2 Myriam Schweingruber 2011-12-07 14:48:56 UTC
Confirmed on current stable.
Comment 3 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:38 UTC
Resetting assignee to default as per bug #305719
Comment 4 Todd 2012-09-02 20:10:25 UTC
*** Bug 299773 has been marked as a duplicate of this bug. ***
Comment 5 Todd 2012-09-02 20:10:39 UTC
*** Bug 295640 has been marked as a duplicate of this bug. ***
Comment 6 Emmanuel Pescosta 2013-11-01 23:15:00 UTC
Git commit 1af756f101d099592df25ddaaf1c34d63633f3a3 by Emmanuel Pescosta.
Committed on 01/11/2013 at 23:12.
Pushed by emmanuelp into branch 'KDE/4.11'.

Fix Bug 287983 - Dolphin truncates tooltip information for long file names

Use KStringHandler and QTextLayout to wrap the text (file name)
into the maximum width of the label "name".

Make use of QFontMetrics to calculate a font size aware tooltip size.
FIXED-IN: 4.11.3
REVIEW: 113101

M  +36   -1    dolphin/src/views/tooltips/filemetadatatooltip.cpp

http://commits.kde.org/kde-baseapps/1af756f101d099592df25ddaaf1c34d63633f3a3
Comment 7 Frank Reininghaus 2013-11-06 09:55:51 UTC
This was pushed shortly after 4.11.3 tagging, so the "Version Fixed In" is 4.11.4.